--- a/src/main/java/config/dev.properties
+++ b/src/main/java/config/dev.properties
@@ -4,6 +4,7 @@ SWAPIApi.apiUrl=https://swapi.dev/api/
 PLANETSschema.apiUrl=https://swapi.dev/api/planets/schema
 SPECIESschema.apiUrl=https://swapi.dev/api/species/schema
 FILMSschema.apiUrl=https://swapi.dev/api/films/schema
+FILMSURI.apiUrl=https://swapi.dev/api/films
 PEOPLEschema.apiUrl=https://swapi.dev/api/people/schema
 STARSHIPSschema.apiUrl=https://swapi.dev/api/starships/schema
 VEHICLESschema.apiUrl=https://swapi.dev/api/vehicles/schema
