--- a/src/main/java/config/dev.properties
+++ b/src/main/java/config/dev.properties
@@ -1,11 +1,13 @@
 # properties
 envName=dev
 SWAPIApi.apiUrl=https://swapi.dev/api/
-PLANETSschema.apiUrl=https://swapi.dev/api/planets/schema
-SPECIESschema.apiUrl=https://swapi.dev/api/species/schema
-FILMSschema.apiUrl=https://swapi.dev/api/films/schema
-FILMSURI.apiUrl=https://swapi.dev/api/films
-PEOPLEschema.apiUrl=https://swapi.dev/api/people/schema
-STARSHIPSschema.apiUrl=https://swapi.dev/api/starships/schema
-VEHICLESschema.apiUrl=https://swapi.dev/api/vehicles/schema
+SWAPIPLANETSSchema.apiUrl=https://swapi.dev/api/planets/schema
+SWAPISPECIESschema.apiUrl=https://swapi.dev/api/species/schema
+SWAPIFILMSschema.apiUrl=https://swapi.dev/api/films/schema
+SWAPIFILMSURI.apiUrl=https://swapi.dev/api/films
+SWAPIPEOPLEschema.apiUrl=https://swapi.dev/api/people/schema
+SWAPISTARSHIPSschema.apiUrl=https://swapi.dev/api/starships/schema
+SWAPIVEHICLESschema.apiUrl=https://swapi.dev/api/vehicles/schema
+
+GORESTAPI.apiUrl=https://gorest.co.in/public-api/
 include=common.properties
