--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.5.2</version>
         </dependency>
-
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.16</version>
+                <scope>provided</scope>
+            </dependency>
     </dependencies>
 <properties>
     <maven.compiler.source>11</maven.compiler.source>
