--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,23 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.5.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 <properties>
     <maven.compiler.source>11</maven.compiler.source>
