--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,28 @@
                     <runOrder>alphabetical</runOrder>
                     <properties>
                         <includeTags>COMPONENT, HEALTH, SMOKE, DEV, CONTRACT</includeTags>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junit5.AllureJunit4</value>
+                        </property>
                     </properties>
+                    <includes>
+                        <include>tests**</include>
+                    </includes>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.basedir}/allure-results</value>
+                        </property>
+                        <property>
+                            <name>junit.jupiter.extensions.autodetection.enabled</name>
+                            <value>true</value>
+                        </property>
+                    </systemProperties>
+                    <reportFormat>plain</reportFormat>
                 </configuration>
             </plugin>
             <plugin>
@@ -129,12 +150,6 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.14.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -150,6 +165,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit4</artifactId>
+            <version>${allure-junit4.version}</version>
+        </dependency>
     </dependencies>
 <properties>
     <maven.compiler.source>11</maven.compiler.source>
@@ -157,5 +177,6 @@
     <aspectj.version>1.8.10</aspectj.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>11</java.version>
+    <allure-junit4.version>2.14.0</allure-junit4.version>
 </properties>
 </project>
