--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                         <includeTags>COMPONENT, HEALTH, SMOKE, DEV, CONTRACT</includeTags>
                         <property>
                             <name>listener</name>
-                            <value>io.qameta.allure.junit5.AllureJunit4</value>
+                            <value>io.qameta.allure.junit4.AllureJunit4</value>
                         </property>
                     </properties>
                     <includes>
@@ -57,6 +57,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>3.1.2</version>
+                <configuration>
+                    <configLocation>google_checks.xml</configLocation>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
@@ -154,11 +157,6 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
-            <version>2.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
